fix: qtd cursos landing page overflow

--- a/codegenius/src/pages/student/landing-page/LandingPage.module.css
+++ b/codegenius/src/pages/student/landing-page/LandingPage.module.css
@@ -15,5 +15,12 @@
     display: flex;
     flex-wrap: wrap;
 
+    max-height: inherit;
+    overflow-y: auto;
+    
     gap: 40px 28px;
+}
+
+.course_list::-webkit-scrollbar {
+    display: none;
 }
